--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^4.3.1",
     "jquery": "^3.7.0",
-    "lodash": "^4.17.21",
-    "moment": "^2.29.4",
+    "package-name": "^0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-owl-carousel": "^2.3.3",
