--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^4.3.1",
+    "clsx": "^2.0.0",
     "jquery": "^3.7.0",
     "package-name": "^0.1.0",
     "react": "^18.2.0",
