--- a/package.json
+++ b/package.json
@@ -13,16 +13,22 @@
     "axios": "^1.4.0",
     "bootstrap": "^4.3.1",
     "clsx": "^2.0.0",
+    "dayjs": "^1.11.9",
+    "formik": "^2.4.3",
+    "history": "^5.3.0",
     "jquery": "^3.7.0",
+    "moment": "^2.29.4",
     "package-name": "^0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-owl-carousel": "^2.3.3",
     "react-redux": "^8.1.1",
-    "react-router-dom": "^6.14.2",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.29.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
